--- a/HashLengthExtension_Project/hash_extension/templates/hash_extension/home.html
+++ b/HashLengthExtension_Project/hash_extension/templates/hash_extension/home.html
@@ -16,9 +16,15 @@
                             <div>
                                 <h5 class="mb-4 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ image.image.title }}</h5>
                             </div>
-                            <a href="{% url 'view_image' image.id image.user image.mac %}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-800">
+                            {% if image.download %}
+                            	<a href="{% url 'view_image' %}?id={{ image.id }}&owner={{ image.user }}&download=true&mac={{ image.mac }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-800">
                                 View Image
                             </a>
+                            {% else %}
+                                <a href="{% url 'view_image' %}?id={{ image.id }}&owner={{ image.user }}&mac={{ image.mac }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-800">
+                                View Image
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
