--- a/HashLengthExtension_Project/hash_extension/templates/hash_extension/attack_result.html
+++ b/HashLengthExtension_Project/hash_extension/templates/hash_extension/attack_result.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container mx-auto">
     <h1 class="text-2xl font-bold my-4">Attack Result</h1>
-    <p><strong>New URL:</strong> <a href="{{ new_url }}" class="text-blue-500 underline">{{ new_url }}</a></p>
+    <p><strong>New URL:</strong> <div class="overflow-auto break-words"><a href="{{ new_url }}" class="text-blue-500 underline">{{ new_url }}</a></div></p>
     <p><strong>New Signature:</strong> {{ new_sig }}</p>
 </div>
 {% endblock %}
