--- a/hash_extension/templates/hash_extension/base.html
+++ b/hash_extension/templates/hash_extension/base.html
@@ -7,11 +7,11 @@
     <title>{% block title %}Hash Length Extension Project{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-blue-600 p-4 shadow-md">
+<body>
+    <nav class="bg-green-600 p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
             <div class="text-white font-semibold text-lg">
-                <a href="{% url 'home' %}">Home</a>
+                <a href="{% url 'home' %}">Stock Images Library</a>
             </div>
             <div>
                 {% if user.is_authenticated %}
