--- a/HashLengthExtension_Project/hash_extension/templates/hash_extension/login.html
+++ b/HashLengthExtension_Project/hash_extension/templates/hash_extension/login.html
@@ -8,13 +8,13 @@
         <h3 class="text-2xl font-semibold mb-6 text-center">Login</h3>
         <div class="mb-4">
             <label class="block text-sm font-medium mb-1" for="username">Username</label>
-            <input type="text" name="username" id="username" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500" required>
+            <input type="text" name="username" id="username" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-green-500" required>
         </div>
         <div class="mb-4">
             <label class="block text-sm font-medium mb-1" for="password">Password</label>
-            <input type="password" name="password" id="password" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500" required>
+            <input type="password" name="password" id="password" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-green-500" required>
         </div>
-        <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Login</button>
+        <button type="submit" class="w-full bg-green-500 text-white py-2 rounded-lg hover:bg-green-600 transition duration-300">Login</button>
     </form>
 </div>
 {% endblock %}
