--- a/HashLengthExtension_Project/hash_extension/templates/hash_extension/register.html
+++ b/HashLengthExtension_Project/hash_extension/templates/hash_extension/register.html
@@ -26,7 +26,7 @@
             {{ form.password2 }}
             {{ form.password2.errors }}
         </div>
-        <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Register</button>
+        <button type="submit" class="w-full bg-green-500 text-white py-2 rounded-lg hover:bg-green-600 transition duration-300">Register</button>
     </form>
 </div>
 {% endblock %}
