--- a/HashLengthExtension_Project/hash_extension/templates/hash_extension/upload_image.html
+++ b/HashLengthExtension_Project/hash_extension/templates/hash_extension/upload_image.html
@@ -7,7 +7,7 @@
     <form method="post" enctype="multipart/form-data" class="bg-white p-6 rounded shadow-md" style="width: 400px;">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded">Upload</button>
+        <button type="submit" class="w-full bg-green-500 text-white p-2 rounded">Upload</button>
     </form>
 </div>
 {% endblock %}
