--- a/hash_extension/templates/hash_extension/home.html
+++ b/hash_extension/templates/hash_extension/home.html
@@ -3,26 +3,26 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <div class="container mx-auto">
-    <h1 class="text-3xl font-bold my-8 text-center">Welcome, {{ user.username }}</h1>
+    <h1 class="text-3xl text-green-800 font-bold my-8 text-center">Welcome, {{ user.username|capfirst }} 👋🏻</h1>
     <div>
         {% if images %}
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 {% for image in images %}
-                    <div class="bg-white border border-gray-200 rounded-lg shadow-lg dark:bg-gray-800 dark:border-gray-700">
+                    <div class="bg-white border border-gray-200 rounded-lg shadow-lg">
                         <div class="w-full h-64 overflow-hidden rounded-t-lg">
-                            <img class="w-full h-full object-cover" src="{{ image.image.url }}" alt="{{ image.image.title }}" />
+                            <img class="w-full h-full object-cover" src="{{ image.image.url }}" alt="{{ image.title }}" />
                         </div>
-                        <div class="p-6">
+                        <div class="p-4">
                             <div>
-                                <h5 class="mb-4 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ image.image.title }}</h5>
+                                <h5 class="mb-3 text-2xl font-bold tracking-tight text-gray-900">{{ image.title }}</h5>
                             </div>
                             {% if image.download %}
-                            	<a href="{% url 'view_image' %}?id={{ image.id }}&owner={{ image.user }}&download=true&mac={{ image.mac }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-800">
-                                View Image
-                            </a>
+                                <a href="{% url 'view_image' %}?id={{ image.id }}&owner={{ image.user }}&download=true&mac={{ image.mac }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-gray-600 rounded-lg hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-500 dark:hover:bg-green-600 dark:focus:ring-green-800">
+                                    My Upload
+                                </a>
                             {% else %}
-                                <a href="{% url 'view_image' %}?id={{ image.id }}&owner={{ image.user }}&mac={{ image.mac }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-800">
-                                View Image
+                                <a href="{% url 'view_image' %}?id={{ image.id }}&owner={{ image.user }}&mac={{ image.mac }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-green-600 rounded-lg hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-500 dark:hover:bg-green-600 dark:focus:ring-green-800">
+                                    View Image
                                 </a>
                             {% endif %}
                         </div>
