--- a/hash_extension/templates/hash_extension/login.html
+++ b/hash_extension/templates/hash_extension/login.html
@@ -1,20 +1,22 @@
+
+
 <!-- hash_extension/templates/hash_extension/login.html -->
 {% extends "hash_extension/base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<div class="min-h-screen flex items-center justify-center bg-gray-100">
-    <form method="post" class="bg-white p-8 rounded-lg shadow-lg w-96">
+<div class="min-h-screen flex items-center justify-center">
+    <form method="post" class="bg-green-600 p-8 rounded-lg shadow-2xl w-full max-w-md">
         {% csrf_token %}
-        <h3 class="text-2xl font-semibold mb-6 text-center">Login</h3>
-        <div class="mb-4">
-            <label class="block text-sm font-medium mb-1" for="username">Username</label>
-            <input type="text" name="username" id="username" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500" required>
+        <h3 class="text-3xl font-bold mb-6 text-center text-gray-100">Login</h3>
+        <div class="mb-5">
+            <label class="block text-md font-medium mb-2 text-gray-100" for="username">Username</label>
+            <input type="text" name="username" id="username" class="w-full p-4 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-200" required>
         </div>
-        <div class="mb-4">
-            <label class="block text-sm font-medium mb-1" for="password">Password</label>
-            <input type="password" name="password" id="password" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500" required>
+        <div class="mb-5">
+            <label class="block text-md font-medium mb-2 text-gray-100" for="password">Password</label>
+            <input type="password" name="password" id="password" class="w-full p-4 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-200" required>
         </div>
-        <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Login</button>
+        <button type="submit" class="w-full bg-black text-white py-3 rounded-lg hover:bg-green-800 transition duration-300">Login</button>
     </form>
 </div>
 {% endblock %}
