--- a/hash_extension/templates/hash_extension/perform_attack.html
+++ b/hash_extension/templates/hash_extension/perform_attack.html
@@ -2,18 +2,26 @@
 {% extends "hash_extension/base.html" %}
 {% block title %}Perform Length Extension Attack{% endblock %}
 {% block content %}
-<div class="container mx-auto">
-    <h1 class="text-2xl font-bold my-4 text-center text-green-500 font-mono">Perform Length Extension Attack</h1>
-    {% if error %}
-        <div class="text-red-500 font-mono">{{ error }}</div>
-    {% endif %}
-    <form method="post" class="bg-black text-green-500 p-6 rounded-lg shadow-md w-full md:w-1/2 mx-auto font-mono">
-        {% csrf_token %}
-        <div class="mb-4">
-            <label class="block text-sm font-medium mb-1" for="url">URL</label>
-            <input type="text" name="url" id="url" class="w-full p-3 border border-gray-700 bg-gray-900 text-green-500 rounded-lg focus:outline-none focus:border-green-500" required>
-        </div>
-        <button type="submit" class="w-full bg-green-500 text-black py-2 rounded-lg hover:bg-green-600 transition duration-300">Perform Attack</button>
-    </form>
+<style>
+    body {
+        background: url('https://media.giphy.com/media/xTiTnx37nc3vjsdeLK/giphy.gif') no-repeat center center fixed;
+        background-size: cover;
+    }
+</style>
+<div class="min-h-screen flex items-center justify-center py-8 px-4">
+    <div class="bg-black bg-opacity-75 p-8 rounded-lg shadow-lg w-full md:w-3/4 lg:w-2/3">
+        <h1 class="text-3xl font-bold my-4 text-center text-red-500 font-mono">❌ Perform Length Extension Attack 💀</h1>
+        {% if error %}
+            <div class="text-red-500 font-mono text-center mb-4">{{ error }}</div>
+        {% endif %}
+        <form method="post" class="bg-black text-red-500 p-6 rounded-lg shadow-lg font-mono">
+            {% csrf_token %}
+            <div class="mb-4">
+                <label class="block text-sm font-medium mb-2" for="url">URL</label>
+                <input type="text" name="url" id="url" class="w-full p-3 border border-gray-700 bg-gray-900 text-red-500 rounded-lg focus:outline-none focus:border-red-500" required>
+            </div>
+            <button type="submit" class="w-full bg-red-500 text-black py-2 rounded-lg hover:bg-red-600 transition duration-300">Perform Attack</button>
+        </form>
+    </div>
 </div>
 {% endblock %}
