--- a/hash_extension/templates/hash_extension/register.html
+++ b/hash_extension/templates/hash_extension/register.html
@@ -2,31 +2,33 @@
 {% extends "hash_extension/base.html" %}
 {% block title %}Register{% endblock %}
 {% block content %}
-<div class="min-h-screen flex items-center justify-center bg-gray-100">
-    <form method="post" class="bg-white p-8 rounded-lg shadow-lg w-96">
+<div class="min-h-screen flex items-center justify-center">
+    <form method="post" class="bg-green-600 p-8 rounded-lg shadow-2xl w-full max-w-md">
         {% csrf_token %}
-        <h3 class="text-2xl font-semibold mb-6 text-center">Register</h3>
-        <div class="mb-4">
-            {{ form.username.label_tag }}
+        <h3 class="text-3xl font-bold mb-6 text-center text-gray-100">Register</h3>
+        <div class="mb-5">
+            <label class="block text-md font-medium mb-2 text-gray-100" for="username">Username</label>
             {{ form.username }}
             {{ form.username.errors }}
         </div>
-        <div class="mb-4">
-            {{ form.email.label_tag }}
+        {% comment %} 
+        <div class="mb-5">
+            <label class="block text-md font-medium mb-2 text-gray-100" for="email">Email</label>
             {{ form.email }}
             {{ form.email.errors }}
-        </div>
-        <div class="mb-4">
-            {{ form.password1.label_tag }}
+        </div> 
+        {% endcomment %}
+        <div class="mb-5">
+            <label class="block text-md font-medium mb-2 text-gray-100" for="password1">Password</label>
             {{ form.password1 }}
             {{ form.password1.errors }}
         </div>
-        <div class="mb-4">
-            {{ form.password2.label_tag }}
+        <div class="mb-5">
+            <label class="block text-md font-medium mb-2 text-gray-100" for="password2">Confirm Password</label>
             {{ form.password2 }}
             {{ form.password2.errors }}
         </div>
-        <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Register</button>
+        <button type="submit" class="w-full bg-black text-white py-3 rounded-lg hover:bg-green-800 transition duration-300">Register</button>
     </form>
 </div>
 {% endblock %}
