--- a/hash_extension/templates/hash_extension/view_image.html
+++ b/hash_extension/templates/hash_extension/view_image.html
@@ -4,14 +4,17 @@
 {% block content %}
 <div class="container mx-auto py-8 px-4">
     <div class="flex justify-between items-center my-4 bg-white p-4 rounded-lg shadow-lg">
-        <h1 class="text-3xl font-semibold text-gray-800">{{ image.title }}</h1>
+        <h1 class="text-3xl font-semibold text-green-800">Photographer: {{ image.owner.username|capfirst }}</h1>
         {% if is_owner %}
             <a href="{{ image.image.url }}" download class="bg-green-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-600 transition duration-300">Download</a>
+        {% else %}
+        <a href="" class="bg-yellow-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-yellow transition duration-300">Buy Premium to Download</a>        
         {% endif %}
+        
     </div>
     <div class="flex justify-center mt-8">
-        <div class="w-full md:w-2/3 lg:w-1/2 bg-white p-6 rounded-lg shadow-lg">
-            <img src="{{ image.image.url }}" alt="{{ image.title }}" class="block mx-auto rounded-lg shadow-md">
+        <div class="w-full bg-white p-6 rounded-lg shadow-lg">
+            <img src="{{ image.image.url }}" alt="{{ image.title }}" class="w-full h-auto rounded-lg shadow-md">
         </div>
     </div>
 </div>
