removed attack link

--- a/hash_extension/templates/hash_extension/base.html
+++ b/hash_extension/templates/hash_extension/base.html
@@ -17,7 +17,7 @@
             <div>
                 {% if user.is_authenticated %}
                     <a href="{% url 'upload_image' %}" class="ml-4 text-white hover:text-gray-200">Upload Image</a>
-                    <a href="{% url 'perform_attack' %}" class="ml-4 text-white hover:text-gray-200">Perform Attack</a>
+                    <!-- <a href="{% url 'perform_attack' %}" class="ml-4 text-white hover:text-gray-200">Perform Attack</a> -->
                     {% comment %} <div class="relative inline-block text-left">
                         <button class="ml-4 text-white hover:text-gray-200">Prevention</button>
                         <div class="origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5">
