--- a/AttackerTool/hash_extension/templates/hash_extension/base.html
+++ b/AttackerTool/hash_extension/templates/hash_extension/base.html
@@ -12,7 +12,7 @@
     <nav class="bg-red-500 p-4 shadow-md">
         <div class="container mx-auto flex justify-center items-center">
             <div class="text-white font-semibold text-xl">
-                Hash Length Extension Attact 💀
+                Hash Length Extension Attack 💀
             </div>
         </div>
     </nav>
