--- a/AttackerTool/hash_extension/templates/hash_extension/perform_attack.html
+++ b/AttackerTool/hash_extension/templates/hash_extension/perform_attack.html
@@ -2,6 +2,13 @@
 {% extends "hash_extension/base.html" %}
 {% block title %}Perform Length Extension Attack{% endblock %}
 {% block content %}
+<nav class="bg-red-500 p-4 shadow-md">
+    <div class="container mx-auto flex justify-center items-center">
+        <div class="text-white font-semibold text-xl">
+            Hash Length Extension Attack 💀
+        </div>
+    </div>
+</nav>
 <style>
     body {
         background: url('https://media.giphy.com/media/xTiTnx37nc3vjsdeLK/giphy.gif') no-repeat center center fixed;
