--- a/hash_extension/templates/hash_extension/base.html
+++ b/hash_extension/templates/hash_extension/base.html
@@ -13,6 +13,8 @@
         <div class="container mx-auto flex justify-between items-center">
             <div class="text-white font-semibold text-lg">
                 <a href="{% url 'home' %}">Stock Images Library</a>
+                <!--🔴 This website is using MD5 Hashing Function 💀 -->
+
             </div>
             <div>
                 {% if user.is_authenticated %}
