--- a/hash_extension/templates/hash_extension/base.html
+++ b/hash_extension/templates/hash_extension/base.html
@@ -9,8 +9,82 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+
+</head>
+
+<body>
+    <nav class="bg-green-600 p-4 shadow-md">
+        <div class="container mx-auto flex justify-between items-center">
+            <div class="text-white font-semibold text-lg">
+                <a href="{% url 'home' %}">Stock Images Library</a>
+            </div>
+            <div class="flex gap-x-2">
+                {% if user.is_authenticated %}
+                <a href="{% url 'upload_image' %}" class="ml-4 text-white hover:text-gray-200">Upload Image</a>
+                <!-- <a href="{% url 'perform_attack' %}" class="ml-4 text-white hover:text-gray-200">Perform Attack</a> -->
+                <!-- <div class="flex gap-x-2 sm:col-span-2">
+                    <div class="flex h-6 items-center">
+                        <button onclick="toggleClick()" id="toggle" type="button"
+                            class="bg-red-200 flex w-8 flex-none cursor-pointer rounded-full bg-gray-200 p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                            role="switch" aria-checked="false" aria-labelledby="switch-1-label">
+                            <span id="toggleSpan" aria-hidden="true"
+                                class="h-4 w-4 translate-x-0 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
+                        </button>
+                    </div>
+                    <label class="text-sm leading-6 text-white" id="switch-1-label">
+                        HMAC
+                    </label>
+                </div>
+                <div class="flex gap-x-2 sm:col-span-2">
+                    <div class="flex h-6 items-center">
+                        <button onclick="toggleClick2()" id="toggle2" type="button"
+                            class="bg-red-200 flex w-8 flex-none cursor-pointer rounded-full bg-gray-200 p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                            role="switch" aria-checked="false" aria-labelledby="switch-1-label">
+                            <span id="toggleSpan2" aria-hidden="true"
+                                class="h-4 w-4 translate-x-0 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
+                        </button>
+                    </div>
+                    <label class="text-sm leading-6 text-white" id="switch-1-label">
+                        SHA384
+                    </label>
+                </div> -->
+                <a href="{% url 'logout' %}" class="ml-4 text-white hover:text-gray-200">Logout</a>
+                {% else %}
+                <a href="{% url 'login' %}" class="ml-4 text-white hover:text-gray-200">Login</a>
+                <a href="{% url 'register' %}" class="ml-4 text-white hover:text-gray-200">Register</a>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+    <div class="container mx-auto mt-1 p-4">
+        {% block content %}
+        {% endblock %}
+    </div>
     <script>
-        let toggle = false;
+        let toggle = "{{state}}"
+        let toggle2 = "{{state.sha385}}"
+
+        let toggleElement = document.getElementById("toggle")
+        let toggleSpan = document.getElementById("toggleSpan")
+
+        if (toggle) {
+            toggleElement.classList.remove("bg-green-200");
+            toggleElement.classList.add("bg-red-200")
+            toggleSpan.classList.add("translate-x-0")
+            toggleSpan.classList.remove("translate-x-3.5")
+            toggle = false
+            console.log("clicked", toggle);
+
+        } else {
+            toggleElement.classList.add("bg-green-200");
+            toggleElement.classList.remove("bg-red-200")
+            toggleSpan.classList.remove("translate-x-0")
+            toggleSpan.classList.add("translate-x-3.5")
+            toggle = true
+            console.log("clicked", toggle);
+            toggle2 = true
+            toggleClick2();
+        }
         function toggleClick() {
 
             const toggleElement = document.getElementById("toggle")
@@ -38,8 +112,8 @@
                 url: "{% url 'toggle_hmac' %}",
                 type: "GET",
                 data: {
-                    'hmac': toggle?0:1,
-                    'sha385': toggle2?0:1
+                    'hmac': toggle ? 0 : 1,
+                    'sha385': toggle2 ? 0 : 1
                 },
                 success: function (response) {
                     // alert('HMAC and sha358 usage toggled: ' + response.use_hmac);
@@ -51,7 +125,27 @@
             });
         }
 
-        let toggle2 = false;
+        toggleElement = document.getElementById("toggle2")
+        toggleSpan = document.getElementById("toggleSpan2")
+        if (toggle2) {
+            toggleElement.classList.remove("bg-green-200");
+            toggleElement.classList.add("bg-red-200")
+            toggleSpan.classList.add("translate-x-0")
+            toggleSpan.classList.remove("translate-x-3.5")
+            toggle2 = false
+            console.log("clicked", toggle2);
+
+        } else {
+            toggleElement.classList.add("bg-green-200");
+            toggleElement.classList.remove("bg-red-200")
+            toggleSpan.classList.remove("translate-x-0")
+            toggleSpan.classList.add("translate-x-3.5")
+            toggle2 = true
+            toggle = true;
+            toggleClick();
+            console.log("clicked", toggle2);
+
+        }
         function toggleClick2() {
 
             const toggleElement = document.getElementById("toggle2")
@@ -76,12 +170,12 @@
 
             }
 
-             $.ajax({
+            $.ajax({
                 url: "{% url 'toggle_hmac' %}",
                 type: "GET",
                 data: {
-                    'hmac': toggle?0:1,
-                    'sha385': toggle2?0:1
+                    'hmac': toggle ? 0 : 1,
+                    'sha385': toggle2 ? 0 : 1
                 },
                 success: function (response) {
                     // alert('HMAC and sha358 usage toggled: ' + response.use_hmac);
@@ -93,60 +187,6 @@
             });
         }
     </script>
-</head>
-
-<body>
-    <nav class="bg-green-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
-            <div class="text-white font-semibold text-lg">
-                <a href="{% url 'home' %}">Stock Images Library</a>
-            </div>
-            <div class="flex gap-x-2">
-                {% if user.is_authenticated %}
-                <a href="{% url 'upload_image' %}" class="ml-4 text-white hover:text-gray-200">Upload Image</a>
-                <!-- <a href="{% url 'perform_attack' %}" class="ml-4 text-white hover:text-gray-200">Perform Attack</a> -->
-                <div class="flex gap-x-2 sm:col-span-2">
-                    <div class="flex h-6 items-center">
-                        <button onclick="toggleClick()" id="toggle" type="button"
-                            class="bg-red-200 flex w-8 flex-none cursor-pointer rounded-full bg-gray-200 p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-                            role="switch" aria-checked="false" aria-labelledby="switch-1-label">
-                            <span id="toggleSpan" aria-hidden="true"
-                                class="h-4 w-4 translate-x-0 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
-                        </button>
-                    </div>
-                    <label class="text-sm leading-6 text-white" id="switch-1-label">
-                        HMAC
-                    </label>
-                </div>
-                <div class="flex gap-x-2 sm:col-span-2">
-                    <div class="flex h-6 items-center">
-                        <button onclick="toggleClick2()" id="toggle2" type="button"
-                            class="bg-red-200 flex w-8 flex-none cursor-pointer rounded-full bg-gray-200 p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-                            role="switch" aria-checked="false" aria-labelledby="switch-1-label">
-                            <span id="toggleSpan2" aria-hidden="true"
-                                class="h-4 w-4 translate-x-0 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
-                        </button>
-                    </div>
-                    <label class="text-sm leading-6 text-white" id="switch-1-label">
-                        SHA385
-                    </label>
-                </div>
-                <a href="{% url 'logout' %}" class="ml-4 text-white hover:text-gray-200">Logout</a>
-                {% else %}
-                <a href="{% url 'login' %}" class="ml-4 text-white hover:text-gray-200">Login</a>
-                <a href="{% url 'register' %}" class="ml-4 text-white hover:text-gray-200">Register</a>
-                {% endif %}
-            </div>
-        </div>
-    </nav>
-    <div class="container mx-auto mt-1 p-4">
-        {% block content %}
-        {% endblock %}
-    </div>
-    {% comment %}
-    <script>
-
-    </script> {% endcomment %}
 </body>
 
 </html>
